[package]
name = "rengo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.6.1"
byteorder = "1.4.3"
chrono = "0.4.26"
mongodb = "2.6.0"
redis = "0.23.1"
serde_json = "1.0.104"
sha2 = "0.10.7"
tokio = "1.29.1"
