[package]
name = "rengo"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bson = "2.6.1"
byteorder = "1.4.3"
chrono = "0.4.26"
serde_json = "1.0.104"
sha2 = "0.10.7"
threadpool = "1.8.1"
tokio = "1.29.1"
futures = "0.3"
rand = "0.8.5"
bincode = "1.3.3"
md-5 = "0.10.6"
trust-dns-resolver = "*"
tokio-rustls = "0.25.0"
rustls = "0.22.2"
webpki-roots = "0.26.0"
rustls-native-certs = "0.7.0"
